--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -54,7 +54,7 @@
       width: 100%;
       height: 100%;
       transform: translateY(-3px); /* account for the height of the clock hands */
-    }
+    } 
 
     .hand {
       width: 50%;
@@ -62,13 +62,36 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.04, 1. 21, 0.58, 1);
     }
 
   </style>
+        
 
-  <script>
+  <script> 
+    const secondHand = document.querySelector('.second-hand')
+    const minHand = document.querySelector('.min-hand')
+    const hourHand = document.querySelector('.hour-hand')
 
+    function setDate(){
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondDegrees = ((seconds/60) * 360) + 90;
+      secondHand.style.transform=`rotate(${secondDegrees}deg)`
 
+      const minutes = now.getMinutes()
+      const minuteDegrees = ((minutes/60) * 360) + 90
+      minHand.style.transform=`rotate(${minuteDegrees}deg)`
+
+      const hours = now.getHours()
+      const hourDegrees = ((hour/12) * 360) + 90
+      hourHand.style.transform=`rotate(${hourDegrees}deg)`
+      console.log(seconds)
+    }
+    setInterval(setDate, 1000)
   </script>
 </body>
 </html>
