--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -87,7 +87,7 @@
       minHand.style.transform=`rotate(${minuteDegrees}deg)`
 
       const hours = now.getHours()
-      const hourDegrees = ((hour/12) * 360) + 90
+      const hourDegrees = ((hours/12) * 360) + 90
       hourHand.style.transform=`rotate(${hourDegrees}deg)`
       console.log(seconds)
     }
