--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -113,7 +113,7 @@
           }
 
           if (inBetween) {
-            checkbox.checked = !checkbox.checked
+            checkbox.checked = true
           }
 
         })
